Добавляет логотип в шапку сайта

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,9 @@
     <title>Сайт мобильного приложения Pink</title>
   </head>
   <body class="page">
-    <header class="header"></header>
+    <header class="header">
+      <img class="header__logo logo" src="http://placehold.it/150x100" alt="Логотип мобильного приложения Pink">
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
   </body>
