--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,22 @@
   <body class="page">
     <header class="header">
       <img class="header__logo logo" src="http://placehold.it/150x100" alt="Логотип мобильного приложения Pink">
+      <nav class="main-nav">
+        <ul class="main-nav__list menu-list">
+          <li class="menu-list__item menu-list__item--active">
+            <a class="menu-list__link" href="#">Главная</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="#">Фотографии</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="#">Конкурс</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="#">Html Academy</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main"></main>
     <footer class="footer"></footer>
