--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
     <header class="header">
       <img class="header__logo logo" src="http://placehold.it/150x100" alt="Логотип мобильного приложения Pink">
       <nav class="main-nav">
+        <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
         <ul class="main-nav__list menu-list">
           <li class="menu-list__item menu-list__item--active">
             <a class="menu-list__link" href="#">Главная</a>
