--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,27 @@
         </ul>
       </nav>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
+      <section class="intro">
+        <h2 class="visually-hidden">Секция с информацией где скачать приложение</h2>
+        <article class="intro__download app">
+          <a class="app__link button" href="#">Скачать приложение</a>
+          <ul class="app__list store">
+            <li class="store__item">
+              <a class="store__link" href="#" aria-label="iTunes"></a>
+            </li>
+            <li class="store__item">
+              <a class="store__link" href="#" aria-label="Google Play"></a>
+            </li>
+            <li class="store__item">
+              <a class="store__link" href="#" aria-label="Microsoft Store"></a>
+            </li>
+          </ul>
+          <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </article>
+      </section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
