Добавляет секцию с информацией о приложении

--- a/source/index.html
+++ b/source/index.html
@@ -32,20 +32,42 @@
       <section class="intro">
         <h2 class="visually-hidden">Секция с информацией где скачать приложение</h2>
         <article class="intro__download app">
+          <h2 class="visually-hidden">Способы скачать приложение</h2>
           <a class="app__link button" href="#">Скачать приложение</a>
-          <ul class="app__list store">
-            <li class="store__item">
-              <a class="store__link" href="#" aria-label="iTunes"></a>
+          <ul class="app__list store-list">
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="iTunes"></a>
             </li>
-            <li class="store__item">
-              <a class="store__link" href="#" aria-label="Google Play"></a>
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="Google Play"></a>
             </li>
-            <li class="store__item">
-              <a class="store__link" href="#" aria-label="Microsoft Store"></a>
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
             </li>
           </ul>
           <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </article>
+      </section>
+      <section class="information">
+        <h2 class="visually-hidden">Секция с информацией о приложении</h2>
+        <header class="information__header">
+          <p class="information__text">Устали от серости мегаполиса?</p>
+          <p class="information__text">Нам есть, что вам предложить!</p>
+        </header>
+        <ul class="information__list">
+          <li class="information__item">
+            <h3 class="information__title">Поднимает настроение</h3>
+            <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+          </li>
+          <li class="information__item">
+            <h3 class="information__title">Меняет мир вокруг</h3>
+            <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </li>
+          <li class="information__item">
+            <h3 class="information__title">Заводит новых друзей</h3>
+            <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer"></footer>
