--- a/source/index.html
+++ b/source/index.html
@@ -69,6 +69,30 @@
           </li>
         </ul>
       </section>
+      <section class="reviews">
+        <h2 class="visually-hidden">Секция с отзывами пользователей</h2>
+        <div class="reviews__wrapper slider">
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
+            </li>
+            <li class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
+            </li>
+            <li class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
+            </li>
+          </ul>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
