Добавляет секцию с тарифами и стоимостью приложения Pink

--- a/source/index.html
+++ b/source/index.html
@@ -93,6 +93,48 @@
           </p>
         </div>
       </section>
+      <section class="price">
+        <h2 class="visually-hidden">Секция с тарифами и стоимостью приложения Pink</h2>
+        <div class="price__wrapper slider">
+          <table class="price__list">
+            <caption class="visually-hidden">Тарифы и стоимость</caption>
+            <tr class="price__item">
+              <th class="price__cell-header">
+                <b class="price__cell-tariff">База</b>
+                <p class="price__cell-cost">1,99 usd</p>
+              </th>
+              <th class="price__cell-header">
+                <b class="price__cell-tariff">Стандарт</b>
+                <p class="price__cell-cost">3,99 usd</p>
+              </th>
+              <th class="price__cell-header">
+                <b class="price__cell-tariff">Анлим</b>
+                <p class="price__cell-cost">9,99 usd</p>
+              </th>
+            </tr>
+            <tr class="price__item">
+              <td class="price__cell">Розовый фильтр</td>
+              <td class="price__cell">Розовый фильтр</td>
+              <td class="price__cell">Розовый фильтр</td>
+            </tr>
+            <tr class="price__item">
+              <td class="price__cell">Смайлики</td>
+              <td class="price__cell">Смайлики</td>
+              <td class="price__cell">Смайлики</td>
+            </tr>
+            <tr class="price__item">
+              <td class="price__cell">Комментарии</td>
+              <td class="price__cell">Комментарии</td>
+              <td class="price__cell">Комментарии</td>
+            </tr>
+          </table>
+          <p class="price__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
