--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
     <main class="main">
       <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
       <section class="intro">
-        <h2 class="visually-hidden">Секция с информацией где скачать приложение</h2>
+        <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
           <h2 class="visually-hidden">Способы скачать приложение</h2>
           <a class="app__link button" href="#">Скачать приложение</a>
@@ -49,7 +49,7 @@
         </article>
       </section>
       <section class="information">
-        <h2 class="visually-hidden">Секция с информацией о приложении</h2>
+        <h2 class="visually-hidden">Информация о приложении</h2>
         <header class="information__header">
           <p class="information__text">Устали от серости мегаполиса?</p>
           <p class="information__text">Нам есть, что вам предложить!</p>
@@ -70,7 +70,7 @@
         </ul>
       </section>
       <section class="reviews">
-        <h2 class="visually-hidden">Секция с отзывами пользователей</h2>
+        <h2 class="visually-hidden">Отзывы пользователей</h2>
         <div class="reviews__wrapper slider">
           <ul class="reviews__list slider__list">
             <li class="reviews__item slider__item">
@@ -87,14 +87,14 @@
             </li>
           </ul>
           <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
+            <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
+            <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
+            <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
           </p>
         </div>
       </section>
       <section class="price">
-        <h2 class="visually-hidden">Секция с тарифами и стоимостью приложения Pink</h2>
+        <h2 class="visually-hidden">Тарифы и стоимость приложения Pink</h2>
         <div class="price__wrapper slider">
           <table class="price__list">
             <caption class="visually-hidden">Тарифы и стоимость</caption>
@@ -129,11 +129,29 @@
             </tr>
           </table>
           <p class="price__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
+            <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
+            <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
+            <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
           </p>
         </div>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Наши контакты</h2>
+        <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <h3 class="contacts__title">Звоните:</h3>
+            <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__title">Пишите:</h3>
+            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__title">Приезжайте в гости:</h3>
+            <address class="contacts__link">ул. Большая Конюшенная, 19/8</address>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer"></footer>
