Добавляет логотип мобильного приложения в футере

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__logo logo" src="http://placehold.it/150x100" alt="Логотип мобильного приложения Pink">
+      <img class="header__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
         <ul class="main-nav__list menu-list">
@@ -153,7 +153,14 @@
           </li>
         </ul>
       </section>
+      <article class="map">
+        <h2 class="visually-hidden">Карта проезда</h2>
+        <div class="map__interactive" id="map"></div>
+        <img class="map__img" src="http://placehold.it/150x100" width="150" height="100" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
+      </article>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <img class="footer__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
+    </footer>
   </body>
 </html>
