--- a/source/index.html
+++ b/source/index.html
@@ -161,6 +161,17 @@
     </main>
     <footer class="footer">
       <img class="footer__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
+      <ul class="footer__list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--facebook" href="#" aria-label="Мы в фэйсбуке"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--youtube" href="#" aria-label="Мы в ютюбе"></a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
