--- a/source/index.html
+++ b/source/index.html
@@ -172,6 +172,10 @@
           <a class="social-list__link social-list__link--youtube" href="#" aria-label="Мы в ютюбе"></a>
         </li>
       </ul>
+      <div class="footer__copyright copyright">
+        <span class="copyright__text">Разработано:</span>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
+      </div>
     </footer>
   </body>
 </html>
