Исправляет отзывы пользователей

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
             <a class="menu-list__link" href="#">Главная</a>
           </li>
           <li class="menu-list__item">
-            <a class="menu-list__link" href="#">Фотографии</a>
+            <a class="menu-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="menu-list__item">
             <a class="menu-list__link" href="#">Конкурс</a>
@@ -72,20 +72,20 @@
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
         <div class="reviews__wrapper slider">
-          <ul class="reviews__list slider__list">
-            <li class="reviews__item slider__item">
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
-            </li>
-            <li class="reviews__item slider__item">
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
-            </li>
-            <li class="reviews__item slider__item">
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
-            </li>
-          </ul>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
             <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
