--- a/source/photo.html
+++ b/source/photo.html
@@ -151,6 +151,14 @@
             <source media="()" srcset=""> -->
             <img class="photo-editor__photo" src="http://placehold.it/150x100" width="150" height="100" alt="Зимний пейзаж">
           </picture>
+          <div class="photo-editor__filter">
+            <button class="photo-editor__toggle photo-editor__toggle--crop" type="button" aria-label="Обрезка фотографии"></button>
+            <button class="photo-editor__toggle photo-editor__toggle--fill" type="button" aria-label="Выбор цвета фотографии"></button>
+            <button class="photo-editor__toggle photo-editor__toggle--contrast" type="button" aria-label="Выбор контрастности фотографии"></button>
+          </div>
+          <div class="photo-editor__scale">
+            <div class="photo-editor__slider"></div>
+          </div>
         </form>
       </section>
     </main>
