Добавляет управляющие кнопки для формы

--- a/source/photo.html
+++ b/source/photo.html
@@ -159,6 +159,10 @@
           <div class="photo-editor__scale">
             <div class="photo-editor__slider"></div>
           </div>
+          <p class="photo-editor__buttons">
+            <button class="photo-editor__button button" type="submit">Запостить</button>
+            <button class="photo-editor__button button" type="reset">Отмена</button>
+          </p>
         </form>
       </section>
     </main>
