--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
             <a class="menu-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="menu-list__item">
-            <a class="menu-list__link" href="#">Конкурс</a>
+            <a class="menu-list__link" href="form.html">Конкурс</a>
           </li>
           <li class="menu-list__item">
             <a class="menu-list__link" href="#">Html Academy</a>
