--- a/source/form.html
+++ b/source/form.html
@@ -32,6 +32,17 @@
       <section class="intro intro-form">
         <h2 class="intro-form__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
+      <section class="form">
+        <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
+        <header class="form__header">
+          <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+        </header>
+        <form class="form__form" action="https://echo.htmlacademy.ru" method="POST">
+        </form>
+        <footer class="form__footer">
+          <p class="form__description"><sup class="simbol simbol--color">*</sup> — обязательные поля</p>
+        </footer>
+      </section>
     </main>
     <footer class="footer">
       <img class="footer__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
