Добавляет поля формы

--- a/source/form.html
+++ b/source/form.html
@@ -38,6 +38,21 @@
           <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </header>
         <form class="form__form" action="https://echo.htmlacademy.ru" method="POST">
+          <fieldset class="form__fieldset">
+            <legend class="form__legend">Персональные данные</legend>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <legend class="form__legend">Контактные данные</legend>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <legend class="form__legend">С каким приложением путешествовали?</legend>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <legend class="form__legend">Опишите свои эмоции</legend>
+          </fieldset>
         </form>
         <footer class="form__footer">
           <p class="form__description"><sup class="simbol simbol--color">*</sup> — обязательные поля</p>
