--- a/source/form.html
+++ b/source/form.html
@@ -38,14 +38,38 @@
           <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </header>
         <form class="form__form" action="https://echo.htmlacademy.ru" method="POST">
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset data">
             <legend class="form__legend">Персональные данные</legend>
+            <ul class="form__list">
+              <li class="data__item">
+                <label class="data__label" for="user-surname">Фамилия:</label>
+                <input class="data__input" id="user-surname" type="text" name="surname" placeholder="Укажите фамилию *">
+              </li>
+              <li class="data__item">
+                <label class="data__label" for="user-name">Имя:</label>
+                <input class="data__input" id="user-name" type="text" name="name" placeholder="Введите ваше имя *">
+              </li>
+              <li class="data__item">
+                <label class="data__label" for="user-patronymic">Отчество</label>
+                <input class="data__input" id="user-patronymic" type="text" name="patronymic" placeholder="Ну и отчество тоже">
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
           </fieldset>
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset data">
             <legend class="form__legend">Контактные данные</legend>
+            <ul class="form__list">
+              <li class="data__item">
+                <label class="data__label" for="user-phone">Номер телефона</label>
+                <input class="data__input" id="user-phone" type="tel" name="phone" placeholder="Номер, пожалуйста">
+              </li>
+              <li class="data__item">
+                <label class="data__label" for="user-email">Адрес почты</label>
+                <input class="data__input" id="user-email" type="email" name="email" placeholder="Введите почту *">
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend">С каким приложением путешествовали?</legend>
