--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
         <form class="form__form" action="https://echo.htmlacademy.ru" method="POST">
           <fieldset class="form__fieldset data">
             <legend class="form__legend">Персональные данные</legend>
-            <ul class="form__list">
+            <ul class="form__list data__list">
               <li class="data__item">
                 <label class="data__label" for="user-surname">Фамилия:</label>
                 <input class="data__input" id="user-surname" type="text" name="surname" placeholder="Укажите фамилию *">
@@ -55,12 +55,38 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset achievements">
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
+            <ul class="form__list achievements__list">
+              <li class="achievements__item">
+                <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
+                <label class="achievements__label" for="first-achievement">Сделал селфи с акулой</label>
+              </li>
+              <li class="achievements__item">
+                <input class="visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
+                <label class="achievements__label" for="second-achievement">Обгорел на пляже</label>
+              </li>
+              <li class="achievements__item">
+                <input class="visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
+                <label class="achievements__label" for="third-achievement">Видел Чака Норриса</label>
+              </li>
+              <li class="achievements__item">
+                <input class="visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
+                <label class="achievements__label" for="fourth-achievement">Накупил сувениров</label>
+              </li>
+              <li class="achievements__item">
+                <input class="visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
+                <label class="achievements__label" for="fifth-achievement">Удержал башню</label>
+              </li>
+              <li class="achievements__item">
+                <input class="visually-hidden" id="sixth-achievement" type="checkbox" name="sixth-achievement">
+                <label class="achievements__label" for="sixth-achievement">Разгромил отель</label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="form__fieldset data">
             <legend class="form__legend">Контактные данные</legend>
-            <ul class="form__list">
+            <ul class="form__list data__list">
               <li class="data__item">
                 <label class="data__label" for="user-phone">Номер телефона</label>
                 <input class="data__input" id="user-phone" type="tel" name="phone" placeholder="Номер, пожалуйста">
