--- a/source/form.html
+++ b/source/form.html
@@ -55,32 +55,32 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset achievements">
+          <fieldset class="form__fieldset">
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="form__list achievements__list">
-              <li class="achievements__item">
+            <ul class="form__list">
+              <li class="form__item">
                 <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
-                <label class="achievements__label" for="first-achievement">Сделал селфи с акулой</label>
+                <label class="form__label form__label--checkbox" for="first-achievement">Сделал селфи с акулой</label>
               </li>
-              <li class="achievements__item">
+              <li class="form__item">
                 <input class="visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
-                <label class="achievements__label" for="second-achievement">Обгорел на пляже</label>
+                <label class="form__label form__label--checkbox" for="second-achievement">Обгорел на пляже</label>
               </li>
-              <li class="achievements__item">
+              <li class="form__item">
                 <input class="visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
-                <label class="achievements__label" for="third-achievement">Видел Чака Норриса</label>
+                <label class="form__label form__label--checkbox" for="third-achievement">Видел Чака Норриса</label>
               </li>
-              <li class="achievements__item">
+              <li class="form__item">
                 <input class="visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
-                <label class="achievements__label" for="fourth-achievement">Накупил сувениров</label>
+                <label class="form__label form__label--checkbox" for="fourth-achievement">Накупил сувениров</label>
               </li>
-              <li class="achievements__item">
+              <li class="form__item">
                 <input class="visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
-                <label class="achievements__label" for="fifth-achievement">Удержал башню</label>
+                <label class="form__label form__label--checkbox" for="fifth-achievement">Удержал башню</label>
               </li>
-              <li class="achievements__item">
+              <li class="form__item">
                 <input class="visually-hidden" id="sixth-achievement" type="checkbox" name="sixth-achievement">
-                <label class="achievements__label" for="sixth-achievement">Разгромил отель</label>
+                <label class="form__label form__label--checkbox" for="sixth-achievement">Разгромил отель</label>
               </li>
             </ul>
           </fieldset>
@@ -99,6 +99,20 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend">С каким приложением путешествовали?</legend>
+            <ul class="form__list">
+              <li class="form__item">
+                <input class="visually-hidden" id="version-ios" type="radio" name="version-app" checked>
+                <label class="form__label form__label--radio" for="version-ios">Pink для iOS</label>
+              </li>
+              <li class="form__item">
+                <input class="visually-hidden" id="version-android" type="radio" name="version-app">
+                <label class="form__label form__label--radio" for="version-android">Pink на Android</label>
+              </li>
+              <li class="form__item">
+                <input class="visually-hidden" id="version-windows" type="radio" name="version-app">
+                <label class="form__label form__label--radio" for="version-windows">Windows Phone</label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend">Опишите свои эмоции</legend>
