--- a/source/form.html
+++ b/source/form.html
@@ -116,6 +116,8 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend">Опишите свои эмоции</legend>
+            <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
+            <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
         </form>
         <footer class="form__footer">
