Удаляет лишние классы

--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
           <h3 class="visually-hidden">Способы скачать приложение</h3>
-          <a class="app__link button" href="#">Скачать приложение</a>
+          <a class="app__link link" href="#">Скачать приложение</a>
           <ul class="app__list store-list">
             <li class="store-list__item">
               <a class="store-list__link" href="#" aria-label="iTunes"></a>
@@ -174,7 +174,7 @@
       </ul>
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано:</span>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
       </div>
     </footer>
   </body>
