--- a/source/photo.html
+++ b/source/photo.html
@@ -181,7 +181,7 @@
       </ul>
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано:</span>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
       </div>
     </footer>
   </body>
