--- a/source/form.html
+++ b/source/form.html
@@ -144,5 +144,16 @@
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
       </div>
     </footer>
+    <section class="modal modal-error">
+      <h2 class="visually-hidden">Ошибка при отправке формы</h2>
+      <p class="modal__title">Что-то пошло не так!</p>
+      <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="button" type="button">Ок</button>
+    </section>
+    <section class="modal modal-show">
+        <h2 class="modal__title">Ваша заявка отправлена</h2>
+        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <button class="button" type="button">Закрыть окно</button>
+      </section>
   </body>
 </html>
