--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт мобильного приложения Pink</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page">
     <header class="header">
