Добавляет базовые стили для блоков page и header

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
+      <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="Логотип мобильного приложения Pink">
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
         <ul class="main-nav__list menu-list">
