--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,12 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="Логотип мобильного приложения Pink">
+      <svg class="header__logo logo" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
+      <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
+        <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
+      </button>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
+        <button class="main-nav__toggle" type="button" aria-label="Кнопка закрытия выпадающего меню"></button>
         <ul class="main-nav__list menu-list">
           <li class="menu-list__item menu-list__item--active">
             <a class="menu-list__link" href="#">Главная</a>
