--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,10 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
+      <svg class="header__logo logo" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
+      <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
+        <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
+      </button>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
         <ul class="main-nav__list menu-list">
