--- a/source/photo.html
+++ b/source/photo.html
@@ -14,7 +14,9 @@
         <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
       </button>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button" aria-label="Кнопка показа и скрытия выпадающего меню"></button>
+        <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
+          <svg class="main-nav__close-icon" width="24" height="24"><use xlink:href="img/sprite.svg#icon-menu-cross"></use></svg>
+        </button>
         <ul class="main-nav__list menu-list">
           <li class="menu-list__item">
             <a class="menu-list__link" href="index.html">Главная</a>
