Переносит блок visually-hidden и wrapper в отдельный блок

--- a/source/index.html
+++ b/source/index.html
@@ -55,25 +55,27 @@
         </article>
       </section>
       <section class="information">
-        <h2 class="visually-hidden">Информация о приложении</h2>
-        <header class="information__header">
-          <p class="information__text">Устали от серости мегаполиса?</p>
-          <p class="information__text">Нам есть, что вам предложить!</p>
-        </header>
-        <ul class="information__list">
-          <li class="information__item">
-            <h3 class="information__title">Поднимает настроение</h3>
-            <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-          </li>
-          <li class="information__item">
-            <h3 class="information__title">Меняет мир вокруг</h3>
-            <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          </li>
-          <li class="information__item">
-            <h3 class="information__title">Заводит новых друзей</h3>
-            <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-          </li>
-        </ul>
+        <div class="wrapper">
+          <h2 class="visually-hidden">Информация о приложении</h2>
+          <header class="information__header">
+            <p class="information__text">Устали от серости мегаполиса?</p>
+            <p class="information__text">Нам есть, что вам предложить!</p>
+          </header>
+          <ul class="information__list">
+            <li class="information__item">
+              <h3 class="information__title">Поднимает настроение</h3>
+              <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="information__item">
+              <h3 class="information__title">Меняет мир вокруг</h3>
+              <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="information__item">
+              <h3 class="information__title">Заводит новых друзей</h3>
+              <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
