--- a/source/index.html
+++ b/source/index.html
@@ -75,6 +75,7 @@
               <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
+          <div class="information__img"></div>
         </div>
       </section>
       <section class="reviews">
