--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
       </section>
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
-        <div class="reviews__wrapper slider">
+        <div class="wrapper slider">
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
