Добавляет базовую стилизацию блоку price и корректирует классы таблицы

--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
+            <button class="slider__toggle slider__toggle--active" type="button" aria-label="Первый переключатель"></button>
             <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
             <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
           </p>
@@ -105,41 +105,41 @@
       <section class="price">
         <h2 class="visually-hidden">Тарифы и стоимость приложения Pink</h2>
         <div class="price__wrapper slider">
-          <table class="price__list">
+          <table class="price__list table">
             <caption class="visually-hidden">Тарифы и стоимость</caption>
-            <tr class="price__item">
-              <th class="price__cell-header">
-                <b class="price__cell-tariff">База</b>
-                <p class="price__cell-cost">1,99 usd</p>
+            <tr class="table__item">
+              <th class="table__cell-header">
+                <b class="table__cell table__cell--tariff">База</b>
+                <p class="table__cell table__cell--cost">1,99 usd</p>
               </th>
-              <th class="price__cell-header">
-                <b class="price__cell-tariff">Стандарт</b>
-                <p class="price__cell-cost">3,99 usd</p>
+              <th class="table__cell-header">
+                <b class="table__cell table__cell--tariff">Стандарт</b>
+                <p class="table__cell table__cell--cost">3,99 usd</p>
               </th>
-              <th class="price__cell-header">
-                <b class="price__cell-tariff">Анлим</b>
-                <p class="price__cell-cost">9,99 usd</p>
+              <th class="table__cell-header">
+                <b class="table__cell table__cell--tariff">Анлим</b>
+                <p class="table__cell table__cell--cost">9,99 usd</p>
               </th>
             </tr>
-            <tr class="price__item">
-              <td class="price__cell">Розовый фильтр</td>
-              <td class="price__cell">Розовый фильтр</td>
-              <td class="price__cell">Розовый фильтр</td>
+            <tr class="table__item">
+              <td class="table__cell-option">Розовый фильтр</td>
+              <td class="table__cell-option">Розовый фильтр</td>
+              <td class="table__cell-option">Розовый фильтр</td>
+            </tr>
+            <tr class="table__item">
+              <td class="table__cell-option">Смайлики</td>
+              <td class="table__cell-option">Смайлики</td>
+              <td class="table__cell-option">Смайлики</td>
             </tr>
             <tr class="price__item">
-              <td class="price__cell">Смайлики</td>
-              <td class="price__cell">Смайлики</td>
-              <td class="price__cell">Смайлики</td>
-            </tr>
-            <tr class="price__item">
-              <td class="price__cell">Комментарии</td>
-              <td class="price__cell">Комментарии</td>
-              <td class="price__cell">Комментарии</td>
+              <td class="table__cell-option">Комментарии</td>
+              <td class="table__cell-option">Комментарии</td>
+              <td class="table__cell-option">Комментарии</td>
             </tr>
           </table>
           <p class="price__toggles slider__toggles">
             <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
-            <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
+            <button class="slider__toggle slider__toggle--active" type="button" aria-label="Второй переключатель"></button>
             <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
           </p>
         </div>
