Добавляет базовую стилизацию блока table и добавляет отступы кнопкам слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
               <td class="table__cell-option">Смайлики</td>
               <td class="table__cell-option">Смайлики</td>
             </tr>
-            <tr class="price__item">
+            <tr class="table__item">
               <td class="table__cell-option">Комментарии</td>
               <td class="table__cell-option">Комментарии</td>
               <td class="table__cell-option">Комментарии</td>
