Добавляет базовую стилизацию блока contacts

--- a/source/index.html
+++ b/source/index.html
@@ -146,21 +146,23 @@
       </section>
       <section class="contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
-        <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <h3 class="contacts__title">Звоните:</h3>
-            <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
-          </li>
-          <li class="contacts__item">
-            <h3 class="contacts__title">Пишите:</h3>
-            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </li>
-          <li class="contacts__item">
-            <h3 class="contacts__title">Приезжайте в гости:</h3>
-            <address class="contacts__link">ул. Большая Конюшенная, 19/8</address>
-          </li>
-        </ul>
+        <div class="contacts__wrapper wrapper">
+          <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <h3 class="contacts__title">Звоните:</h3>
+              <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+            </li>
+            <li class="contacts__item">
+              <h3 class="contacts__title">Пишите:</h3>
+              <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </li>
+            <li class="contacts__item">
+              <h3 class="contacts__title">Приезжайте в гости:</h3>
+              <address class="contacts__link">ул. Большая Конюшенная, 19/8</address>
+            </li>
+          </ul>
+        </div>
       </section>
       <article class="map">
         <h2 class="visually-hidden">Карта проезда</h2>
