--- a/source/index.html
+++ b/source/index.html
@@ -167,7 +167,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="http://placehold.it/150x100" width="150" height="100" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
+        <img class="map__img" src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
       </article>
     </main>
     <footer class="footer">
