--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <svg class="header__logo logo" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
+      <svg class="header__logo logo logo--white-text" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
       <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
         <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
       </button>
@@ -171,21 +171,39 @@
       </article>
     </main>
     <footer class="footer">
-      <img class="footer__logo logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип мобильного приложения Pink">
-      <ul class="footer__list social-list">
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере"></a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--facebook" href="#" aria-label="Мы в фэйсбуке"></a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--youtube" href="#" aria-label="Мы в ютюбе"></a>
-        </li>
-      </ul>
-      <div class="footer__copyright copyright">
-        <span class="copyright__text">Разработано:</span>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">HTML Academy</a>
+      <div class="wrapper">
+        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use></svg>
+        <ul class="footer__list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере">
+              <svg class="social-list__icon" width="18" height="15">
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Мы в фэйсбуке">
+              <svg class="social-list__icon" width="8" height="19">
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Мы в ютюбе">
+              <svg class="social-list__icon" width="15" height="14">
+                <use xlink:href="img/sprite.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__copyright copyright">
+          <span class="copyright__text">Разработано:</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
+            <svg class="social-list__icon" width="27" height="34">
+              <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
