--- a/source/photo.html
+++ b/source/photo.html
@@ -35,7 +35,7 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
-      <section class="intro intro-photo">
+      <section class="intro-photo wrapper">
         <h2 class="intro-photo__title">Фотографии пользователей</h2>
       </section>
       <section class="photo-content">
