--- a/source/index.html
+++ b/source/index.html
@@ -9,13 +9,19 @@
   </head>
   <body class="page">
     <header class="header">
-      <svg class="header__logo logo logo--white-text" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
+      <svg class="header__logo logo logo--white-text" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+        <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+      </svg>
       <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
-        <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
+        <svg class="menu-burger__icon" width="49" height="24">
+          <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+        </svg>
       </button>
       <nav class="main-nav">
         <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
-          <svg class="main-nav__close-icon" width="24" height="24"><use xlink:href="img/sprite.svg#icon-menu-cross"></use></svg>
+          <svg class="main-nav__close-icon" width="24" height="24">
+            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+          </svg>
         </button>
         <ul class="main-nav__list menu-list">
           <li class="menu-list__item menu-list__item--active">
@@ -84,15 +90,18 @@
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
@@ -172,7 +181,9 @@
     </main>
     <footer class="footer">
       <div class="wrapper">
-        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use></svg>
+        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
+          <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
+        </svg>
         <ul class="footer__list social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере">
