Изменяет блок intro-photo на intro-inner

--- a/source/photo.html
+++ b/source/photo.html
@@ -41,8 +41,8 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
-      <section class="intro-photo wrapper">
-        <h2 class="intro-photo__title">Фотографии пользователей</h2>
+      <section class="intro-inner wrapper">
+        <h2 class="intro-inner__title">Фотографии пользователей</h2>
       </section>
       <section class="photo-content wrapper">
         <h2 class="visually-hidden">Галерея постов</h2>
