--- a/source/form.html
+++ b/source/form.html
@@ -35,8 +35,8 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Конкурс мобильного приложения Pink</h1>
-      <section class="intro intro-form">
-        <h2 class="intro-form__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      <section class="intro-inner wrapper">
+        <h2 class="intro-inner__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
       <section class="form">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
