Изменяет блок form на competition

--- a/source/form.html
+++ b/source/form.html
@@ -38,12 +38,12 @@
       <section class="intro-inner wrapper">
         <h2 class="intro-inner__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
-      <section class="form wrapper">
+      <section class="competition wrapper">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
-        <header class="form__header">
-          <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+        <header class="competition__header">
+          <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </header>
-        <form class="form__form" action="https://echo.htmlacademy.ru" method="POST">
+        <form class="form" action="https://echo.htmlacademy.ru" method="POST">
           <fieldset class="form__fieldset data">
             <legend class="form__legend">Персональные данные</legend>
             <ul class="form__list data__list">
