Добавляет базовую стилизацию элементу textarea блока form

--- a/source/form.html
+++ b/source/form.html
@@ -130,7 +130,7 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <div class="wrapper">
-              <legend class="form__legend">Опишите свои эмоции</legend>
+              <legend class="form__legend form__legend--margin">Опишите свои эмоции</legend>
               <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
               <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
