Корректирует базовую стилизацию блоков buttons и competition

--- a/source/form.html
+++ b/source/form.html
@@ -135,10 +135,12 @@
               <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
           </fieldset>
-          <button class="form__button button" type="submit">Отправить форму</button>
+          <p class="wrapper">
+            <button class="form__button button" type="submit">Отправить форму</button>
+          </p>
         </form>
-        <footer class="form__footer">
-          <p class="form__description"><sup class="simbol simbol--color">*</sup> — обязательные поля</p>
+        <footer class="competition__footer">
+          <p class="competition__description"><span class="competition__description-simbol">*</span> — обязательные поля</p>
         </footer>
       </section>
     </main>
