Корректирует базовую стилизацию блоков buttons, competition, data и form

--- a/source/form.html
+++ b/source/form.html
@@ -46,7 +46,7 @@
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
           <fieldset class="form__fieldset data">
             <div class="wrapper">
-              <legend class="form__legend form__legend--hidden">Персональные данные</legend>
+              <h3 class="form__legend form__legend--hidden">Персональные данные</h3>
               <ul class="form__list data__list">
                 <li class="data__item">
                   <label class="data__label" for="user-surname">Фамилия:</label>
@@ -65,7 +65,7 @@
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--gray">
             <div class="wrapper">
-              <legend class="form__legend">Ваши безбашенные<br> достижения в путешествии</legend>
+              <h3 class="form__legend">Ваши безбашенные<br> достижения в путешествии</h3>
               <ul class="form__list">
                 <li class="form__item">
                   <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
@@ -96,7 +96,7 @@
           </fieldset>
           <fieldset class="form__fieldset data">
             <div class="wrapper">
-              <legend class="form__legend form__legend--hidden">Контактные данные</legend>
+              <h3 class="form__legend form__legend--hidden">Контактные данные</h3>
               <ul class="form__list data__list">
                 <li class="data__item">
                   <label class="data__label" for="user-phone">Номер телефона</label>
@@ -111,7 +111,7 @@
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--gray">
             <div class="wrapper">
-              <legend class="form__legend">С каким приложением путешествовали?</legend>
+              <h3 class="form__legend">С каким приложением путешествовали?</h3>
               <ul class="form__list">
                 <li class="form__item">
                   <input class="visually-hidden" id="version-ios" type="radio" name="version-app" checked>
@@ -130,7 +130,7 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <div class="wrapper">
-              <legend class="form__legend form__legend--margin">Опишите свои эмоции</legend>
+              <h3 class="form__legend form__legend--margin">Опишите свои эмоции</h3>
               <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
               <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
