Добавляет блоки tariff-selection, slider и удаляет блок table

--- a/source/index.html
+++ b/source/index.html
@@ -44,20 +44,22 @@
       <section class="intro">
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
-          <h3 class="visually-hidden">Способы скачать приложение</h3>
-          <a class="app__link link" href="#">Скачать приложение</a>
-          <ul class="app__list store-list">
-            <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="iTunes"></a>
-            </li>
-            <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Google Play"></a>
-            </li>
-            <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
-            </li>
-          </ul>
-          <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          <div class="wrapper">
+            <h3 class="visually-hidden">Способы скачать приложение</h3>
+            <a class="app__link link" href="#">Скачать приложение</a>
+            <ul class="app__list store-list">
+              <li class="store-list__item">
+                <a class="store-list__link" href="#" aria-label="iTunes"></a>
+              </li>
+              <li class="store-list__item">
+                <a class="store-list__link" href="#" aria-label="Google Play"></a>
+              </li>
+              <li class="store-list__item">
+                <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
+              </li>
+            </ul>
+            <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
         </article>
       </section>
       <section class="information">
@@ -111,39 +113,39 @@
           </p>
         </div>
       </section>
-      <section class="price">
+      <section class="price main__price">
         <h2 class="visually-hidden">Тарифы и стоимость приложения Pink</h2>
-        <div class="price__wrapper slider">
-          <table class="price__list table">
+        <div class="wrapper slider">
+          <table class="price__list tariff-selection">
             <caption class="visually-hidden">Тарифы и стоимость</caption>
-            <tr class="table__item">
-              <th class="table__cell-header">
-                <b class="table__cell table__cell--tariff">База</b>
-                <p class="table__cell table__cell--cost">1,99 usd</p>
+            <tr class="tariff-selection__item">
+              <th class="tariff-selection__cell-header">
+                <b class="tariff-selection__cell tariff-selection__cell--tariff">База</b>
+                <p class="tariff-selection__cell tariff-selection__cell--cost">1,99 usd</p>
               </th>
-              <th class="table__cell-header">
-                <b class="table__cell table__cell--tariff">Стандарт</b>
-                <p class="table__cell table__cell--cost">3,99 usd</p>
+              <th class="tariff-selection__cell-header">
+                <b class="tariff-selection__cell tariff-selection__cell--tariff">Стандарт</b>
+                <p class="tariff-selection__cell tariff-selection__cell--cost">3,99 usd</p>
               </th>
-              <th class="table__cell-header">
-                <b class="table__cell table__cell--tariff">Анлим</b>
-                <p class="table__cell table__cell--cost">9,99 usd</p>
+              <th class="tariff-selection__cell-header">
+                <b class="tariff-selection__cell tariff-selection__cell--tariff">Анлим</b>
+                <p class="tariff-selection__cell tariff-selection__cell--cost">9,99 usd</p>
               </th>
             </tr>
-            <tr class="table__item">
-              <td class="table__cell-option">Розовый фильтр</td>
-              <td class="table__cell-option">Розовый фильтр</td>
-              <td class="table__cell-option">Розовый фильтр</td>
+            <tr class="tariff-selection__item">
+              <td class="tariff-selection__cell-option">Розовый фильтр</td>
+              <td class="tariff-selection__cell-option">Розовый фильтр</td>
+              <td class="tariff-selection__cell-option">Розовый фильтр</td>
             </tr>
-            <tr class="table__item">
-              <td class="table__cell-option">Смайлики</td>
-              <td class="table__cell-option">Смайлики</td>
-              <td class="table__cell-option">Смайлики</td>
+            <tr class="tariff-selection__item">
+              <td class="tariff-selection__cell-option">Смайлики</td>
+              <td class="tariff-selection__cell-option">Смайлики</td>
+              <td class="tariff-selection__cell-option">Смайлики</td>
             </tr>
-            <tr class="table__item">
-              <td class="table__cell-option">Комментарии</td>
-              <td class="table__cell-option">Комментарии</td>
-              <td class="table__cell-option">Комментарии</td>
+            <tr class="tariff-selection__item">
+              <td class="tariff-selection__cell-option">Комментарии</td>
+              <td class="tariff-selection__cell-option">Комментарии</td>
+              <td class="tariff-selection__cell-option">Комментарии</td>
             </tr>
           </table>
           <p class="price__toggles slider__toggles">
