Задаёт padding через элемент intro-inner блока main

--- a/source/photo.html
+++ b/source/photo.html
@@ -41,7 +41,7 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
-      <section class="intro-inner wrapper">
+      <section class="intro-inner main__intro-inner wrapper">
         <h2 class="intro-inner__title">Фотографии пользователей</h2>
       </section>
       <section class="photo-content wrapper">
